# noir-ecdsa

./: .gitignore
bigint_parser/: Cargo.toml
bigint_parser/src/: main.rs
example/: Nargo.toml  Prover.toml
example/scripts/: benchmark.sh  info.sh  prove-honk.sh  prove-plonk.sh
example/src/: main.nr
hash_to_curve/: Cargo.toml
hash_to_curve/src/: main.rs
lib/: Nargo.toml
lib/src/: lib.nr  secp256r1.nr  secp384r1.nr
signature_gen/: Cargo.toml
signature_gen/src/: main.rs
